--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,8 @@
 @import './base/reset';
 @import './utils/vars';
 @import './utils/vis-hidden';
- 
+
+@import './components/logo';
 @import './components/container';
 @import './components/section';
 @import './components/modal';
