--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -6,6 +6,11 @@
     border-bottom: 1px solid #ECECEC;
 }
 
+.header-flex {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 
 .navigation {
     display: flex;
