--- a/sass/main.css
+++ b/sass/main.css
@@ -329,6 +329,12 @@ body {
   border-bottom: 1px solid #ECECEC;
 }
 
+.header-flex {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .navigation {
   display: flex;
   align-items: center;
