--- a/css/main.css
+++ b/css/main.css
@@ -61,6 +61,23 @@ body {
   margin: -1px;
 }
 
+.logo {
+  font-family: "Raleway";
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+}
+.logo__web--blue {
+  color: var(--accent-color);
+}
+.logo__studio--black {
+  color: #000000;
+}
+.logo__studio--wite {
+  color: var(--text-light);
+}
+
 .container {
   width: 1200px;
   padding-left: 15px;
@@ -284,6 +301,7 @@ body {
 }
 
 .header {
+  height: 80px;
   border-bottom: 1px solid #ECECEC;
 }
 
@@ -291,45 +309,18 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 80px;
-}
-
-.logo {
-  font-family: "Raleway";
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-}
-
-.logo-prime {
-  color: var(--accent-color);
-}
-
-.logo-second {
-  color: #000000;
-}
-
-.logo-second-inv {
-  color: var(--text-light);
+  height: 100%;
 }
 
 .navigation {
   display: flex;
   align-items: center;
 }
-
-.nav-list {
+.navigation__list {
   display: flex;
   margin-left: 93px;
 }
-
-.nav-item:not(:first-child),
-.contacts-item:not(:first-child) {
-  margin-left: 50px;
-}
-
-.nav-link {
+.navigation__link {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -338,8 +329,10 @@ body {
   position: relative;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.nav-link.current::after {
+.navigation__link:hover, .navigation__link:focus {
+  color: var(--accent-color);
+}
+.navigation__link.current::after {
   content: "";
   position: absolute;
   width: 100%;
@@ -349,8 +342,17 @@ body {
   left: 0;
   top: 45px;
 }
+.navigation-item:not(:first-child) {
+  margin-left: 50px;
+}
 
-.header-link {
+.contacts {
+  display: flex;
+}
+.contacts__item:not(:first-child) {
+  margin-left: 50px;
+}
+.contacts__link {
   display: flex;
   align-items: center;
   font-weight: 500;
@@ -360,32 +362,18 @@ body {
   color: var(--text-second-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.header-svg-mail,
-.header-svg-tel {
+.contacts__link:hover, .contacts__link:focus {
+  color: var(--accent-color);
+}
+.contacts__link:hover .contacts__icon, .contacts__link:focus .contacts__icon {
+  fill: var(--accent-color);
+}
+.contacts__icon {
   fill: var(--text-second-color);
   background-repeat: no-repeat;
   background-size: cover;
   margin-right: 10px;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.header-contacts {
-  display: flex;
-}
-
-.header-link:hover,
-.header-link:focus,
-.nav-link:hover,
-.nav-link:focus {
-  color: var(--accent-color);
-}
-
-.header-link:hover .header-svg-mail,
-.header-link:focus .header-svg-mail,
-.header-link:hover .header-svg-tel,
-.header-link:focus .header-svg-tel {
-  fill: var(--accent-color);
 }
 
 .hero {
@@ -398,8 +386,7 @@ body {
   margin: 0 auto;
   padding: 200px 0;
 }
-
-.hero-text {
+.hero .hero__text {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -412,8 +399,7 @@ body {
   margin-right: auto;
   margin-bottom: 30px;
 }
-
-.hero-btn {
+.hero .hero__btn {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 700;
@@ -434,17 +420,23 @@ body {
   border-width: 0;
 }
 
-.benefits-title {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: var(--text-dark);
-  margin-bottom: 10px;
+.benefits__list {
+  display: flex;
+  justify-content: space-between;
 }
-
-.benefits-item::before {
+.benefits__list .benefits__item:nth-child(1)::before {
+  background-image: url(../images/antenna.svg);
+}
+.benefits__list .benefits__item:nth-child(2)::before {
+  background-image: url(../images/clock.svg);
+}
+.benefits__list .benefits__item:nth-child(3)::before {
+  background-image: url(../images/diagram.svg);
+}
+.benefits__list .benefits__item:nth-child(4)::before {
+  background-image: url(../images/astronaut.svg);
+}
+.benefits__list .benefits__item::before {
   display: block;
   content: "";
   height: 120px;
@@ -454,29 +446,16 @@ body {
   border-radius: 4px;
   margin-bottom: 30px;
 }
-
-.benefits-item:nth-child(1)::before {
-  background-image: url(../images/antenna.svg);
+.benefits__list .benefits__title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--text-dark);
+  margin-bottom: 10px;
 }
-
-.benefits-item:nth-child(2)::before {
-  background-image: url(../images/clock.svg);
-}
-
-.benefits-item:nth-child(3)::before {
-  background-image: url(../images/diagram.svg);
-}
-
-.benefits-item:nth-child(4)::before {
-  background-image: url(../images/astronaut.svg);
-}
-
-.benefits-list {
-  display: flex;
-  justify-content: space-between;
-}
-
-.benefits-text {
+.benefits__list .benefits__text {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
@@ -490,8 +469,7 @@ body {
 .activity {
   padding-bottom: 94px;
 }
-
-.activity-title {
+.activity__title {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
@@ -500,17 +478,14 @@ body {
   color: var(--text-dark);
   margin-bottom: 50px;
 }
-
-.activity-list {
+.activity__list {
   display: flex;
   justify-content: space-between;
 }
-
-.activity-item {
+.activity__item {
   position: relative;
 }
-
-.activity-text {
+.activity__text {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -530,8 +505,7 @@ body {
   background-color: #F5F4FA;
   padding-top: -94px;
 }
-
-.team-title {
+.team__title {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
@@ -540,22 +514,19 @@ body {
   color: var(--text-dark);
   margin-bottom: 50px;
 }
-
-.team-item {
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
-}
-
-.team-list {
+.team__list {
   display: flex;
   justify-content: space-between;
 }
-
-.team-img {
+.team__item {
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+  background-color: var(--text-light);
+}
+.team__img {
   margin-bottom: 30px;
 }
-
-.team-name {
+.team__name {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
@@ -564,8 +535,7 @@ body {
   color: var(--text-dark);
   margin-bottom: 10px;
 }
-
-.team-position {
+.team__position {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.19;
@@ -575,27 +545,20 @@ body {
   padding-bottom: 16px;
 }
 
-.team-item {
-  background-color: var(--text-light);
-}
-
-.team-soc-list {
+.socials {
   display: flex;
   justify-content: center;
   margin-bottom: 30px;
 }
-
-.team-soc-item {
+.socials__item {
   width: 44px;
   height: 44px;
   margin-right: 10px;
 }
-
-.team-soc-item:last-child {
+.socials__item:last-child {
   margin-right: 0;
 }
-
-.team-soc-link {
+.socials__link {
   width: 100%;
   height: 100%;
   border-radius: 50%;
@@ -604,23 +567,20 @@ body {
   justify-content: center;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.team-soc-link:hover,
-.team-soc-link:focus {
+.socials__link:hover, .socials__link:focus {
   background-color: var(--accent-color);
 }
-
-.team-soc-link:hover .team-soc-icon,
-.team-soc-link:focus .team-soc-icon {
+.socials__link:hover .socials__icon, .socials__link:focus .socials__icon {
   fill: var(--text-light);
 }
-
-.team-soc-icon {
-  fill: var(--icon-color);
+.socials__icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.socials__icon--gray {
+  fill: var(--icon-color);
+}
 
-.clients-title {
+.clients__title {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
@@ -629,52 +589,52 @@ body {
   color: var(--text-dark);
   margin-bottom: 50px;
 }
-
-.clients-list {
+.clients__list {
   display: flex;
   justify-content: space-between;
-  /* margin-bottom: 30px; */
 }
-
-.clients-item {
+.clients__item {
   width: 170px;
   height: 92px;
   border: 1px solid var(--icon-color);
   border-radius: 4px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
-
-.clients-link {
+.clients__item:hover {
+  border: 1px solid var(--accent-color);
+}
+.clients__item:hover .clients__icon {
+  fill: var(--accent-color);
+}
+.clients__link {
   height: 100%;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-
-.clients-icon {
-  fill: var(--icon-color);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.clients-item:hover,
-.clients-link:focus .clients-item {
+.clients__link:focus .clients__item {
   border: 1px solid var(--accent-color);
 }
-
-.clients-item:hover .clients-icon,
-.clients-link:focus .clients-icon {
+.clients__link:focus .clients__icon {
   fill: var(--accent-color);
+}
+.clients__link {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.clients__icon {
+  fill: var(--icon-color);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer {
   background-color: var(--second-bgcolor);
   padding: 60px 0;
 }
-
-.footer-address {
+.footer__address {
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -684,20 +644,17 @@ body {
   margin-top: 20px;
   margin-bottom: 10px;
 }
-
-.footer-item:not(:last-child) {
+.footer__item:not(:last-child) {
   margin-bottom: 10px;
 }
-
-.footer-link {
+.footer__link {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
-
-.footer-soc-title {
+.footer__soc-title {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14px;
@@ -707,63 +664,26 @@ body {
   padding-top: 15px;
   margin-bottom: 20px;
 }
-
-.footer-main-list {
+.footer__main-list {
   display: flex;
+  justify-content: space-between;
 }
 
-.footer-main-item:nth-child(2) {
-  margin-left: 70px;
-  margin-right: 93px;
-}
-
-.footer-soc-list {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 30px;
-}
-
-.footer-soc-item {
-  width: 44px;
-  height: 44px;
-  margin-right: 10px;
+.socials__link--bg-gray {
   background-color: rgba(255, 255, 255, 0.1);
-  border-radius: 50%;
 }
 
-.footer-soc-item:last-child {
-  margin-right: 0;
-}
-
-.footer-soc-link {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.footer-soc-icon {
+.socials__icon--wite {
   fill: var(--text-light);
 }
 
-.footer-soc-link:hover,
-.footer-soc-link:focus {
-  background-color: var(--accent-color);
-}
-
-.footer-soc-link:hover .footer-soc-icon,
-.footer-soc-link:focus .footer-soc-icon {
-  fill: var(--text-light);
-}
-
-.footer-sub {
+.subscribe {
   display: flex;
 }
-
-.footer-sub-title {
+.subscribe__icon {
+  margin-left: 10px;
+}
+.subscribe__title {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14px;
@@ -773,8 +693,7 @@ body {
   padding-top: 15px;
   margin-bottom: 20px;
 }
-
-.footer-sub-input {
+.subscribe__input {
   width: 358px;
   height: 50px;
   left: 815px;
@@ -784,15 +703,15 @@ body {
   border-radius: 4px;
   background-color: var(--second-bgcolor);
   color: var(--text-light);
+  padding-left: 16px;
 }
-
-.footer-sub-btn {
+.subscribe__btn {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
-  /* letter-spacing: 0.06em; */
+  letter-spacing: 0.06em;
   color: var(--text-light);
   background-color: var(--accent-color);
   min-width: 200px;
@@ -806,51 +725,14 @@ body {
   margin-left: 12px;
 }
 
-.footer-sub-btn {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-}
-
-.footer-sub-icon {
-  margin-left: 10px;
-}
-
-.nav-projects-list {
+.nav-projects__list {
   display: flex;
   justify-content: space-evenly;
   margin: 0 auto;
   width: 611px;
   margin-bottom: 50px;
 }
-
-.projects-item:hover .projects-text {
-  transform: translateY(0);
-}
-
-.projects-wrap {
-  position: relative;
-  overflow: hidden;
-}
-
-.projects-text {
-  position: absolute;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 1.5555555556;
-  letter-spacing: 0.03em;
-  color: var(--text-light);
-  background-color: rgba(33, 150, 243, 0.9);
-  top: 0;
-  height: 100%;
-  transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  padding: 63px 24px;
-}
-
-.nav-projects-btn {
+.nav-projects__btn {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 500;
@@ -865,52 +747,62 @@ body {
   padding: 6px 22px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.nav-projects-btn:hover, .nav-projects-btn:focus {
+.nav-projects__btn:hover, .nav-projects__btn:focus {
   color: var(--text-light);
   background-color: var(--accent-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-.projects-list {
+.projects {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   gap: 30px;
-  /* margin-left: -30px;
-  margin-bottom: -30px; */
 }
-
-.projects-item {
+.projects__text {
+  position: absolute;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.5555555556;
+  letter-spacing: 0.03em;
+  color: var(--text-light);
+  background-color: rgba(33, 150, 243, 0.9);
+  top: 0;
+  height: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 63px 24px;
+}
+.projects__item {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.projects-item:hover, .projects-item:focus {
+.projects__item:hover, .projects__item:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-  /* flex-basis: calc(100% / 3 - 30px);
-  margin-left: 30px;
-  margin-bottom: 30px; */
 }
-
-.projects-title {
+.projects__item:hover .projects__text {
+  transform: translateY(0);
+}
+.projects__title {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--text-dark);
 }
-
-.projects-sign {
+.projects__sign {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.67;
   letter-spacing: 0.03em;
   color: var(--text-second-color);
 }
-
-.projects-title-sign {
+.projects__title-sign {
   padding: 20px 24px;
   border-left: 1px solid #EEEEEE;
   border-right: 1px solid #EEEEEE;
   border-bottom: 1px solid #EEEEEE;
+}
+.projects__wrap {
+  position: relative;
+  overflow: hidden;
 }/*# sourceMappingURL=main.css.map */
