--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,7 +1,4 @@
 .header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
     height: 80px;
     border-bottom: 1px solid #ECECEC;
 }
@@ -10,84 +7,76 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    height: 100%; 
 }
 
 .navigation {
     display: flex;
     align-items: center;
+
+    &__list {
+        display: flex;
+        margin-left: 93px;
+    }
+
+    &__link {
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 1.14;
+        letter-spacing: 0.02em;
+        color: var(--text-dark);
+        position: relative;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        &:hover,
+        &:focus {
+            color: var(--accent-color);
+        }
+        &.current::after {
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 4px;
+            border-radius: 2px;
+            background-color: var(--accent-color);
+            left: 0;
+            top: 45px;
+        }
+    }
+    &-item:not(:first-child) {
+        margin-left: 50px;
+    }    
 }
 
-
-.nav-list {
+.contacts {
     display: flex;
-    margin-left: 93px;
+
+    &__item:not(:first-child) {
+        margin-left: 50px;
+    }
+    &__link {
+        display: flex;
+        align-items: center;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 1.14;
+        letter-spacing: 0.02em;
+        color: var(--text-second-color);
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        &:hover,
+        &:focus {
+            color: var(--accent-color);
+        }
+        &:hover .contacts__icon,
+        &:focus .contacts__icon {
+            fill: var(--accent-color);
+        }
+    }
+    &__icon {
+       fill: var(--text-second-color);
+            background-repeat: no-repeat;
+            background-size: cover;
+            margin-right: 10px;
+            transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }      
 }
 
-
-.nav-item:not(:first-child),
-.contacts-item:not(:first-child) {
-    margin-left: 50px;
-}
-
-
-.nav-link {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    color: var(--text-dark);
-    position: relative;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.nav-link.current::after {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 4px;
-    border-radius: 2px;
-    background-color: var(--accent-color);
-    left: 0;
-    top: 45px;
-
-}
-
-.header-link {
-    display: flex;
-    align-items: center;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    color: var(--text-second-color);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-
-.header-svg-mail,
-.header-svg-tel {
-    fill: var(--text-second-color);
-    background-repeat: no-repeat;
-    background-size: cover;
-    margin-right: 10px;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-}
-
-.header-contacts {
-    display: flex;
-}
-
-.header-link:hover,
-.header-link:focus,
-.nav-link:hover,
-.nav-link:focus {
-    color: var(--accent-color);
-}
-
-.header-link:hover .header-svg-mail,
-.header-link:focus .header-svg-mail,
-.header-link:hover .header-svg-tel,
-.header-link:focus .header-svg-tel {
-    fill: var(--accent-color);
-}
