--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -8,25 +8,23 @@
     max-width: 1600px;
     margin: 0 auto;
     padding: 200px 0;
-}
+    .hero__text {
+            font-weight: 900;
+            font-size: 44px;
+            line-height: 1.36;
+            text-align: center;
+            letter-spacing: 0.06em;
+            text-transform: uppercase;
+            color: var(--text-light);
+            max-width: 696px;
+            margin-left: auto;
+            margin-right: auto;
+            margin-bottom: 30px;
+    
+    
+        }
 
-.hero-text {
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
-    text-align: center;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
-    color: var(--text-light);
-    max-width: 696px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 30px;
-
-
-}
-
-.hero-btn {
+    .hero__btn {
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
@@ -46,3 +44,6 @@
     border-radius: 4px;
     border-width: 0;
 }
+}
+
+
