--- a/css/main.css
+++ b/css/main.css
@@ -99,6 +99,9 @@ body {
   transition: opacity 250ms, visibility 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, 50%) scale(0);
+}
 
 .modal {
   position: absolute;
@@ -113,12 +116,7 @@ body {
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.backdrop.is-hidden .modal {
-  transform: translate(-50%, 50%) scale(0);
-}
-
-.modal-close-btn {
+.modal__btn {
   width: 30px;
   height: 30px;
   border: 1px solid rgba(0, 0, 0, 0.1);
@@ -128,17 +126,14 @@ body {
   top: 8px;
   background-color: transparent;
 }
-
-.modal-close-svg {
+.modal__btn:focus .modal__svg {
+  fill: var(--accent-color);
+}
+.modal__btn:hover .modal__svg {
+  fill: var(--accent-color);
+}
+.modal__svg {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-close-btn:focus .modal-close-svg {
-  fill: var(--accent-color);
-}
-
-.modal-close-btn:hover .modal-close-svg {
-  fill: var(--accent-color);
 }
 
 .is-hidden {
@@ -147,9 +142,7 @@ body {
   pointer-events: 0;
 }
 
-.modal-title {
-  /* font-family: 'Roboto';
-  font-style: normal; */
+.form__title {
   font-weight: 700;
   font-size: 20px;
   line-height: 1.15;
@@ -158,32 +151,27 @@ body {
   color: var(--text-dark);
   margin-bottom: 12px;
 }
-
-.modal-lable {
+.form__lable {
   font-weight: 400;
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.01em;
   color: var(--text-second-color);
 }
-
-.modal-field:not(:first-child) {
+.form__field:not(:first-child) {
   margin-top: 10px;
 }
-
-.modal-wrap {
+.form__wrap {
   position: relative;
 }
-
-.modal-name-icon {
+.form__icon {
   position: absolute;
   left: 12px;
   top: 50%;
   transform: translateY(-50%);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.modal-input {
+.form__input {
   width: 100%;
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -192,21 +180,17 @@ body {
   outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.modal-input:focus {
+.form__input:focus {
   border-color: var(--accent-color);
 }
-
-.modal-input:focus + .modal-name-icon {
+.form__input:focus + .form__icon {
   fill: var(--accent-color);
 }
-
-.modal-comment {
+.form__comment {
   margin-top: 10px;
   margin-bottom: 20px;
 }
-
-.modal-input-comment {
+.form__input-comment {
   width: 100%;
   height: 120px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -216,24 +200,20 @@ body {
   outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.modal-input-comment:focus {
+.form__input-comment:focus {
   border-color: var(--accent-color);
 }
-
-.modal-input-comment::placeholder {
+.form__input-comment::placeholder {
   font-weight: 400;
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-
-.modal-chekbox {
+.form__chekbox {
   padding-bottom: 30px;
 }
-
-.modal-checkbox-label {
+.form__checkbox-label {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
@@ -242,8 +222,7 @@ body {
   display: flex;
   align-items: center;
 }
-
-.modal-check-span {
+.form__check-span {
   width: 16px;
   height: 15px;
   border: 2px solid #303030;
@@ -255,22 +234,18 @@ body {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.modal-check-icon {
+.form__check-icon {
   fill: transparent;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.modal-checkbox-input:checked + .modal-checkbox-label .modal-check-span {
+.form__checkbox-input:checked + .form__checkbox-label .form__check-span {
   background-color: var(--accent-color);
   border: none;
 }
-
-.modal-checkbox-input:checked + .modal-checkbox-label .modal-check-icon {
+.form__checkbox-input:checked + .form__checkbox-label .form__check-icon {
   fill: var(--text-light);
 }
-
-.modal-checkbox-link {
+.form__checkbox-link {
   font-weight: 400;
   font-size: 14px;
   line-height: 24px;
@@ -278,8 +253,7 @@ body {
   text-decoration-line: underline;
   color: var(--accent-color);
 }
-
-.modal-btn-sub {
+.form__sub {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 700;
