--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -178,10 +178,17 @@
         fill: var(--text-light);
     }
 
+    &__checkbox-text {
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 1.71;
+        letter-spacing: 0.03em;
+    }
+
     &__checkbox-link {
         font-weight: 400;
         font-size: 14px;
-        line-height: 24px;
+        line-height: 1.71;
         letter-spacing: 0.03em;
         text-decoration-line: underline;
         color: var(--accent-color);
